[gd_scene load_steps=3 format=3 uid="uid://cp0f4wuex133u"]

[ext_resource type="Script" path="res://systems/tutorial/tutorial_overlay.gd" id="1_2vd8p"]
[ext_resource type="PackedScene" uid="uid://b45r81lj73pdb" path="res://systems/tutorial/tutorial_window.tscn" id="2_ixjv6"]

[node name="TutorialOverlay" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2vd8p")

[node name="BackgroundDim" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="TutorialWindow" parent="." instance=ExtResource("2_ixjv6")]
unique_name_in_owner = true
layout_mode = 0

[editable path="TutorialWindow"]
